--- a/index.html
+++ b/index.html
@@ -133,10 +133,20 @@
                 </div>
                 <div class="school_int">
                     <div class="school_pic">
-                        
+                        <img src="./images/school/school1.jpg" alt="">
                     </div>
                     <div class="school_txt">
-
+                        <div class="title">
+                            <h1>曙光・居仁校</h1>
+                            <h2>國小部</h2>
+                        </div>
+                        <div class="school_info">
+                            <ul>
+                                <li>電話：04 2229 7799</li>
+                                <li>地址：403台中市西區三民路一段168-172</li>
+                                <li>前往粉專</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
