--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
             </div>
         </div>
         <div class="banner">
-            暫時區塊
+            <div class="banner_info">
+                <div class="pic">
+                    <img src="./images/banner_pic.png" alt="">
+                </div>
+               
+                <div class="txt">
+                    <p class="p1">讓自己的<span class="s1">未來</span> 充滿無限<span class="s2">曙光</span></p>
+                    <p class="p2">有好的學習態度 才是面對人生致勝的關鍵</p>
+                </div>
+            </div>
+            <div class="banner_scoll">
+                SCOLL
+            </div>
         </div>
         <div class="date_block">
             <ul>
@@ -151,12 +163,27 @@
                 </div>
             </div>
         </div>
+
         <div class="video">
             <div class="title green_gradient_bg">
                 影音專區
             </div>
-            <div class="info_box"></div>
+            <div class="info_box">
+                <div class="video_box">
+                    <div class="video_title">
+                        影片名稱影片名稱影片名稱影片名稱影片名稱
+                    </div>
+                    <div class="video_play">
+                        放視訊
+                    </div>
+                </div>
+                <div class="video_menu">
+                    <button class="flyer_prev"></button>
+                    <button class="flyer_next"></button>
+                </div>
+            </div>
         </div>
+
         <div class="news">
             <div class="title brown_gradient_bg">
                 最新消息
