--- a/index.html
+++ b/index.html
@@ -179,6 +179,42 @@
                 </div>
                 <div class="video_menu">
                     <button class="flyer_prev"></button>
+                    <div class="video_menu_box">
+                        <ul>
+                            <li>
+                                <img src="./images/video/video1.png" alt="">
+                                <span ></span>
+                            </li>
+                            <li>
+                                <img src="./images/video/video2.png" alt="">
+                                <span></span>
+                            </li>
+                            <li>
+                                <img src="./images/video/video1.png" alt="">
+                                <span></span>
+                            </li>
+                            <li>
+                                <img src="./images/video/video2.png" alt="">
+                                <span class="on"></span>
+                            </li>
+                            <li>
+                                <img src="./images/video/video1.png" alt="">
+                                <span></span>
+                            </li>
+                            <li>
+                                <img src="./images/video/video2.png" alt="">
+                                <span></span>
+                            </li>
+                            <li>
+                                <img src="./images/video/video1.png" alt="">
+                                <span></span>
+                            </li>
+                            <li>
+                                <img src="./images/video/video2.png" alt="">
+                                <span></span>
+                            </li>
+                        </ul>
+                    </div>
                     <button class="flyer_next"></button>
                 </div>
             </div>
@@ -188,19 +224,59 @@
             <div class="title brown_gradient_bg">
                 最新消息
             </div>
-            <div class="info_box"></div>
+            <div class="info_box">
+                <ul class="news_box">
+                    <li>
+                        <span class="news_date">
+                            2020年08月08日
+                        </span>
+                        <span class="news_info">
+                            父親節快樂！
+                        </span>
+                    </li>
+                    <li>
+                        <span class="news_date">
+                            2020年08月08日
+                        </span>
+                        <span class="news_info">
+                            父親節快樂！
+                        </span>
+                    </li>
+                </ul>
+                <ul class="dots">
+                    <li class="on"></li>
+                    <li></li>
+                </ul>
+            </div>
         </div>
         <div class="about">
             <div class="title orange_gradient_bg">
                 關於曙光
             </div>
-            <div class="info_box"></div>
+            <div class="info_box">
+                <ul class="about_txt">
+                    <li class="about_blod">
+                        學習是一輩子的課題，曙光相信－<span class="word_orange about_blod">有好的學習態度，才是面對人生致勝的關鍵。</span>
+                    </li>
+                    <li class="text_indent">
+                        『曙光』意即破曉時的陽光，常用來比喻已經在望的光明前景。
+                        自 1980 年曙光創辦以來，我們始終以教育為天職；秉承因材施教的理念，以用心、愛心及耐心的態度，教育每一位曙光學子，希望如同曙光般，引領他們走向光明璀璨的未來。
+                    </li>
+                    <li class="text_indent">真正的教育是一種突破自我的體現。</li>
+                    <li class="text_indent">我們常思考－－要如何才能激發孩子們對於學習的興趣？</li>
+                    <li class="text_indent">
+                        於是，曙光在多年教學經驗的累積下，成功研發幾套教學模式，例如：動機教學法、診斷式教學法、互動式資優數學等，並結合電子白板與數位教材，讓教學內容更加豐富多元，希望能藉此幫助更多的學生，把學習培養成習慣，自主管理並規劃讀書計畫，把學習真正融入生活中。
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="edt_link">
             <div class="title green_gradient_bg">
                 教育單位連結
             </div>
-            <div class="info_box"></div>
+            <div class="info_box">
+               
+            </div>
         </div>
         <div class="footer">
             <div class="info_box">footer</div>
