--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="new_class">
+		<div class="flyer">
 			<div class="title orange_gradient_bg">
 				最新課程
 			</div>
