--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="./css/reset.css">
-	<link rel="stylesheet" href="./css/index.css">
+	<link rel="stylesheet" href="./style/css/reset.css">
+	<link rel="stylesheet" href="./style/css/all.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
 					<img src="./images/banner_pic.png" alt="">
 				</div>
 
-				<div class="txt">
+				<div class="banner_txt">
 					<p class="p1">讓自己的<span class="s1">未來</span> 充滿無限<span class="s2">曙光</span></p>
 					<p class="p2">有好的學習態度 才是面對人生致勝的關鍵</p>
 				</div>
