--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./style/css/reset.css">
 	<link rel="stylesheet" href="./style/css/all.css">
+	<link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -302,7 +303,7 @@
 		</div>
 		<div class="footer">
 			<div class="info_box">
-				<div class="schoo_group">
+				<div class="school_group">
 					<ul>
 						<li>
 							<span class="name">曙光‧居仁校國中部</span>
