--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./style/css/reset.css">
 	<link rel="stylesheet" href="./style/css/all.css">
-	<link rel="stylesheet" href="./css/index.css">
+	<!-- <link rel="stylesheet" href="./css/index.css"> -->
 </head>
 
 <body>
 	<div class="wrap" id="app">
 		<div class="header">
 			<div class="logo"></div>
+			<div class="menu_btn">
+			</div>
 			<div class="menu">
 				<ul>
 					<li>最新課程</li>
@@ -45,22 +47,22 @@
 		<div class="date_block">
 			<ul>
 				<li>
-					創立<span class="date_num">00</span>年
+					創立<span class="date_num" data-text="年">00</span>
 				</li>
 				<li>
-					分校<span class="date_num">00</span>所
+					分校<span class="date_num" data-text="所">00</span>
 				</li>
 				<li>
-					第一志願<span class="date_num">0000</span>人
+					第一志願<span class="date_num" data-text="人">0000</span>
 				</li>
 				<li>
-					國中教育會考<span class="date_num">0000</span>天
+					國中教育會考<span class="date_num" data-text="天">0000</span>
 				</li>
 				<li>
-					高中學測<span class="date_num">000</span>天
+					高中學測<span class="date_num"  data-text="天">000</span>
 				</li>
 				<li>
-					高中指考<span class="date_num">000</span>天
+					高中指考<span class="date_num"  data-text="天">000</span>
 				</li>
 			</ul>
 		</div>
@@ -270,6 +272,12 @@
 					</li>
 				</ul>
 			</div>
+		
+			<div class="pic">
+				<img src="../../images/about_people.png" alt="">
+			</div>
+		
+			
 		</div>
 		<div class="edu_link">
 			<div class="title green_gradient_bg">
