--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 			</div>
 			<div class="info_box">
 				<div class="flyer_box">
-					<div class="flyer_group">
-						<div class="flyer_item" :class="{on : item.isActive}" v-for="item in flyer_data.flyer_menu">
+					<div class="flyer_group" :style="flyer_data.flyer_group">
+						<div id="flyer_item" class="flyer_item" :class="{on : item.isActive}"
+							v-for="item in flyer_data.flyer_menu">
 							<div class="flyer_txt">{{item.flyer_name}}</div>
 							<div class="flyer_pic">
 								<img :src="item.flyer_src" alt="">
@@ -101,8 +102,9 @@
 				</div>
 				<div class="flyer_menu">
 					<button class="flyer_prev" @click="flyer_prev" v-if="flyer_data.flyer_menu.length > 10"></button>
-					<div class="flyer_menu_box">
-						<ul :style="flyer_data.flyer_menu_move , flyer_data.flyer_menu_iscenter">
+					<div id="flyer_menu_box" class="flyer_menu_box">
+						<ul
+							:style="{'margin-left': flyer_data.flyer_menu_style.flyer_menu_move +'px', 'justify-content': flyer_data.flyer_menu_style.flyer_menu_iscenter}">
 							<li v-for="(item , index) in flyer_data.flyer_menu">
 								<img :src="item.flyer_src" alt="" @click="imgHandler(index)">
 								<span :class="{on : item.isActive}"></span>
@@ -520,33 +522,61 @@
 		<div class="scroll_top"></div>
 	</div>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.9/vue.js'></script>
+	<script src="./js/jquery-3.5.1.min.js"></script>
 	<script src='./js/index.js'></script>
 	<script>
-		
+
 		let vm = new Vue({
 			el: "#app",
 			data: data,
 			mounted() {
-				if (this.flyer_data.flyer_menu.length > 10) {
-					this.flyer_data.flyer_menu_iscenter = "justify-content: flex-start;";
-					// this.flyer_data.flex_moveX = 50 * (this.flyer_data.flyer_menu.length - 10)
-					// this.flyer_data.flyer_menu_start = this.flyer_data.flex_moveX
-					// this.flyer_data.flyer_menu_end = this.flyer_data.flex_moveX * - 1
-					// this.flyer_data.flyer_menu_move = "transform: translateX(" + this.flyer_data.flex_moveX + "px);";
+				// $(window).width() 取得螢幕寬度
+				// $(window).height() 取得螢幕高度
+				// offsetWidth 
+				let item = this.flyer_data;
+				if (item.flyer_menu.length > 10) {
+					item.flyer_max_move = item.flyer_menu.length % 10
+					item.flyer_scroll = true
+					item.flyer_menu_style.flyer_menu_iscenter = "flex-start";
+					item.flyer_menu_style.flyer_menu_move = "-10";
 				}
+				const vm = this;
+				vm.fullWidth = window.innerWidth;
+				vm.fullHeight = window.innerHeight;
+				if ($(window).width() <= 768) {
+					this.changeWidth()
+				}
+				window.onresize = () => {
+					vm.fullWidth = window.innerWidth;
+					vm.fullHeight = window.innerHeight;
+					// if(){}
+					if ($(window).width() <= 768) {
+						this.changeWidth()
+					} else {
+						item.flyer_group = "";
+					}
+				};
 			},
 			methods: {
 				flyer_next() {
-					if (this.flyer_data.flyer_menu_end == this.flyer_data.flex_moveX) return
-					this.flyer_data.flex_moveX -= 100
-					this.flyer_data.flyer_menu_move = "transform: translateX(" + this.flyer_data.flex_moveX + "px);";
-
+					this.windowWidth()
+					let item = this.flyer_data;
+					let flyer_move = item.flyer_menu_style.flyer_menu_move
+					if (item.flyer_scroll & item.flyer_move_count < item.flyer_max_move) {
+						console.log(flyer_move);
+						item.flyer_menu_style.flyer_menu_move = flyer_move - 100
+						item.flyer_move_count++
+					}
 				},
 				flyer_prev() {
-					if (this.flyer_data.flyer_menu_start == this.flyer_data.flex_moveX) return
-					this.flyer_data.flex_moveX += 100
-					this.flyer_data.flyer_menu_move = "transform: translateX(" + this.flyer_data.flex_moveX + "px);";
-
+					this.windowWidth()
+					let item = this.flyer_data;
+					let flyer_move = item.flyer_menu_style.flyer_menu_move
+					if (item.flyer_scroll & item.flyer_move_count > 0) {
+						console.log(flyer_move);
+						item.flyer_menu_style.flyer_menu_move = flyer_move + 100
+						item.flyer_move_count--
+					}
 				},
 				imgHandler(index) {
 					if (this.flyer_data.flyer_now_pic == index) return
@@ -555,8 +585,24 @@
 					this.flyer_data.flyer_menu[index].isActive = true
 				},
 				menuHandler() {
-					this.menuActive = !this.menuActive
+					// this.menuActive = !this.menuActive
+				},
+				windowWidth() {
+					let item = this.flyer_data;
+					if ($(window).width() < 1280) {
+						console.log('768');
+						item.flyer_max_move = item.flyer_menu.length % 6
+					} else {
+						console.log('1280');
+						item.flyer_max_move = item.flyer_menu.length % 10
+					}
+				},
+				changeWidth() {
+					let item = this.flyer_data;
+					let move = ($(window).width() / 2) - ($('#flyer_item').width() / 2)
+					item.flyer_group = "transform: translateX(" + move + "px)";
 				}
+
 			}
 		})
 	</script>
